Fix spacing, button classname for edit mail details modal

--- a/src/MainWindow/ResultPage/ResultPage.scss
+++ b/src/MainWindow/ResultPage/ResultPage.scss
@@ -109,8 +109,7 @@
     text-decoration: none;
   }
 
-  #other-actions img,
-  #view-button img {
+  #other-actions img {
     margin-right: 0.5rem;
   }
 
